--- a/job_pipeline - merge concepts,cdc.ipynb
+++ b/job_pipeline - merge concepts,cdc.ipynb
@@ -312,7 +312,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4948933253794526,
+     "commandId": 4948933253794525,
      "dataframes": [
       "_sqldf"
      ]
@@ -340,6 +340,84 @@
       "defaultValue": "",
       "label": "Enter File Path",
       "name": "input_path",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "param_2": {
+     "currentValue": "",
+     "nuid": "95d0bb3f-fc6f-4d46-a1b9-450a7bde4cdc",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": null,
+      "name": "param_2",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "param_2",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "param_3": {
+     "currentValue": "",
+     "nuid": "b65e135f-f4c5-4801-9136-a3ae59933cda",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": null,
+      "name": "param_3",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "param_3",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "param_4": {
+     "currentValue": "",
+     "nuid": "be9bbb0b-71f0-405e-9cd6-d544e0b2ecf0",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": null,
+      "name": "param_4",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "param_4",
       "options": {
        "widgetType": "text",
        "autoCreated": false,
