--- a/Gold_layer.ipynb
+++ b/Gold_layer.ipynb
@@ -35,6 +35,15 @@
     "\n",
     "summary_df.write.mode(\"overwrite\").format(\"delta\").saveAsTable(\"dev_catalog.default.gold_claim_summary\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"hello databricks\")"
+   ]
   }
  ],
  "metadata": {
